--- a/templates/index.html
+++ b/templates/index.html
@@ -9,8 +9,53 @@
     {% bootstrap_javascript %}
     <link href="{{ STATIC_URL }}css/site.css" media="all" rel="stylesheet">
     <script>
+        // condense an array of arrays down to an array of numbers (averages)
         var aggregate = function(data) {
-
+            var result = [];
+            for(i = 0; i < data.length; i++) {
+                if (data[i].length > 0) {
+                    var sum = 0;
+                    data[i].forEach(function(entry){
+                        sum += entry;
+                    });
+                    result[i] = sum / data[i].length;
+                }
+                else if (i > 0) {
+                    // if there is no value here, use the previous value
+                    result[i] = result[i-1];
+                }
+                else {
+                    // if there is still no value, just use 0 for this point
+                    result[i] = 0;
+                }
+            }
+            return result;
+        }
+        var updateChart = function(chart, dataset, data) {
+            console.log("Setting chart dataset " + dataset + " to " + data);
+            for (i = 0; i < data.length; i++) {
+                chart.datasets[dataset].points[i].value = data[i];
+            }
+            chart.update();
+        }
+        var populateDataSet = function(chart, path, aggregation, datasetId) {
+            console.log("Building chart from " + path);
+            $.get(path, function(data, status){
+                console.log(data);
+                var rawEntries = [[],[],[],[],[],[],[]];
+                data.forEach(function(entry){
+                    for(i = 0; i <= rawEntries.length; i++) {
+                        if (moment(entry["created"]).isAfter(dates[i].startOf(aggregation))) {
+                            if (moment(entry["created"]).isBefore(dates[i].endOf(aggregation))) {
+                                rawEntries[i].push(entry["value"]);
+                                break;
+                            }
+                        }
+                    }
+                });
+                datasetToAdd = aggregate(rawEntries);
+                updateChart(chart, datasetId, datasetToAdd);
+            });
         }
     </script>
 </head>
@@ -20,9 +65,14 @@
 
     {% block bootstrap3_content %}
     <div class="container">
-        <div class="panel panel-info">
+        <div id="body-panel" class="panel panel-info">
             <div class="panel-heading">
                 Body
+                <div class="pull-right btn-group btn-group-xs aggregation" role="group" aria-label="Aggregation">
+                    <button type="button" class="btn btn-default" data-chart="body" data-aggregation="month">monthly</button>
+                    <button type="button" class="btn btn-default" data-chart="body" data-aggregation="week">weekly</button>
+                    <button type="button" class="btn btn-default" data-chart="body" data-aggregation="day">daily</button>
+                </div>
             </div>
             <div class="panel-body">
                 <canvas id="body"></canvas>
@@ -32,40 +82,32 @@
     </div>
     <script>
         $(document).ready(function(){
-            var ctx = $("#body").get(0).getContext("2d");
+            $("#body-panel > .panel-heading > [class*=aggregation] > [data-aggregation='week']").trigger('click');
+        });
+        $('.aggregation button').click(function(){
+            console.log($(this).html());
+            $(this).siblings().removeClass('active');
+            $(this).addClass('active');
+            var ctx = $("#" + this.dataset.chart).get(0).getContext("2d");
             // Build labels for this week
             dates = [];
             weeks = [];
             labels = [];
-            // Set strings for date formatting
-            moment.locale('en', {
-                calendar : {
-                    lastDay : '[Yesterday]',
-                    sameDay : '[This Week]',
-                    nextDay : '[Tomorrow]',
-                    lastWeek : '[Last Week]',
-                    nextWeek : 'dddd',
-                    sameElse : 'L',
-                    sameWeek: '[This Week]'
-                }
-            });
 
             for(i = 6; i >= 0; i--){
                 // dates.push(moment().subtract(i, 'days'));
-                dates.push(moment().subtract(i, 'weeks'));
+                dates.push(moment().subtract(i, this.dataset.aggregation));
                 if (i > 1) {
-                    labels.push(i + " weeks ago");
+                    labels.push(i + " " + this.dataset.aggregation + "s ago");
                 }
                 else if (i == 1) {
-                    labels.push("Last Week");
+                    if (this.dataset.aggregation != 'day') {
+                        labels.push("last " + this.dataset.aggregation);
+                    }
+                    else{ labels.push("today"); }
                 }
-                else {
-                    labels.push("This Week");
-                }
+                else { labels.push("this " + this.dataset.aggregation); }
             }
-            console.log("dates: " + dates);
-            console.log("weeks: " + weeks);
-            console.log("labels: " + labels);
             // Build dataset
             dataset = {
                 label: "Weight",
@@ -83,39 +125,8 @@
                     dataset
                 ]
             },{scaleBeginAtZero: true});
-            $.get("/weight", function(data, status){
-                console.log(data);
-                var weekEntries = [[],[],[],[],[],[],[]];
-                data.forEach(function(entry){
-                    for(i = 0; i <= 6; i++) {
-                        if (moment(entry["created"]).isAfter(dates[i].startOf('week'))) {
-                            console.log(entry["created"] + " is after " + dates[i].startOf('week'));
-                            if (moment(entry["created"]).isBefore(dates[i].endOf('week'))) {
-                                console.log(entry["created"] + " is before " + dates[i].endOf('week'));
-                                weekEntries[i].push(entry["value"]);
-                                // bodyChart.addData([entry["value"]], labels[i]);
-                                // bodyChart.update();
-                                break;
-                            }
-                        }
-                    }
-                    //bodyChart.datasets[0].points[].value = entry["value"];
-                    bodyChart.update();
-                    console.log(bodyChart.generateLegend());
-                    $('#body-legend').html(bodyChart.generateLegend());
-                });
-                console.log("weekEntries: " + weekEntries);
-                for(i = 0; i <= 6; i++) {
-                    if (weekEntries[i].length > 0) {
-                        var sum = 0;
-                        weekEntries[i].forEach(function(entry){
-                            sum += entry;
-                        });
-                        bodyChart.datasets[0].points[i].value = sum / weekEntries[i].length;
-                        bodyChart.update();
-                    }
-                }
-            });
+            populateDataSet(bodyChart, '/weight', this.dataset.aggregation, 0);
+            $('#body-legend').html(bodyChart.generateLegend());
         });
     </script>
     {% endblock %}
