Add lean body mass to body chart

--- a/templates/index.html
+++ b/templates/index.html
@@ -88,9 +88,13 @@
                 console.log("Intervals: " + this.intervals)
                 // Build dataset
                 $.when(
-                    $.get('/weight')
-                ).then( function (rawWeight) {
-                    dataset = {
+                    $.get('/weight'),
+                    $.get('/bodyfat')
+                ).then( function (rawWeight, rawBodyfat) {
+                    console.log(rawWeight[0]);
+                    console.log(rawBodyfat[0]);
+                    console.log("Building weight dataset")
+                    weight = {
                         label: "Weight",
                         fillColor: "rgba(0,0,220,0.6)",
                         strokeColor: "rgba(0,0,220,1)",
@@ -98,12 +102,35 @@
                         pointStrokeColor: "#fff",
                         pointHighlightFill: "#fff",
                         pointHighlightStroke: "rgba(0,0,220,0.6)",
-                        data: aggregate(rawWeight, body.aggregation, body.intervals)
+                        data: aggregate(rawWeight[0], body.aggregation, body.intervals)
+                    };
+                    console.log("Building bodyfat dataset")
+                    var bodyfat = aggregate(rawBodyfat[0], body.aggregation, body.intervals);
+                    console.log(bodyfat);
+                    var leanMass = [];
+                    for(i = 0; i < weight['data'].length; i++){
+                        if (bodyfat[i] > 0) {
+                            leanMass.push(weight['data'][i] - (weight['data'][i] * (bodyfat[i] * 0.01)));
+                        } else {
+                            leanMass.push(0);
+                        }
+                    }
+                    console.log(leanMass);
+                    lean = {
+                        label: "Lean Mass",
+                        fillColor: "rgba(0,220,0,0.6)",
+                        strokeColor: "rgba(0,220,0,1)",
+                        pointColor: "rgba(0,220,0,1)",
+                        pointStrokeColor: "#fff",
+                        pointHighlightFill: "#fff",
+                        pointHighlightStroke: "rgba(0,220,0,0.6)",
+                        data: leanMass
                     };
                     var chart = new Chart(ctx).Line({
                         labels: intervalsAsLabels(body.intervals, body.aggregation),
                         datasets: [
-                            dataset
+                            weight,
+                            lean
                         ]
                     },{scaleBeginAtZero: true});
                     // populateDataSet(chart, '/weight', this.aggregation, 0, intervals);
