--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,7 @@
     <title>index</title>
     <script src="{{ STATIC_URL }}js/jquery-2.1.3.min.js"></script>
     <script src="{{ STATIC_URL }}js/Chart.min.js"></script>
+    <!-- <script src=https://rawgit.com/FVANCOP/ChartNew.js/master/ChartNew.js ></script> -->
     <script src="{{ STATIC_URL }}js/moment-with-locales.js"></script>
     <script src="{{ STATIC_URL }}js/common.js"></script>
     <script src="{{ STATIC_URL }}js/body.js"></script>
@@ -11,6 +12,7 @@
     {% bootstrap_css %}
     {% bootstrap_javascript %}
     <link href="{{ STATIC_URL }}css/site.css" media="all" rel="stylesheet">
+    <link href='http://fonts.googleapis.com/css?family=Droid+Sans+Mono' rel='stylesheet' type='text/css'>
 </head>
 <body>
     {# Display django.contrib.messages as Bootstrap alerts #}
@@ -62,8 +64,9 @@
                     </div>
                 </div>
             </div>
-            <div class="panel-nutrition">
-                <canvas id="nutrition"></canvas>
+            <div class="panel-body" style="display: inline-block;">
+                <canvas id="nutrition-calories-actual"></canvas>
+                <canvas id="nutrition-calories-target"></canvas>
             </div>
             <!-- <div id="nutrition-legend" class="panel-footer chart-legend"></div> -->
         </div>
