Removed footer and copied text

--- a/static/css/site.css
+++ b/static/css/site.css
@@ -283,7 +283,7 @@ section, footer{
 
 
 footer{
-	background-color: #111111;
+	background-color: #888888;
 	bottom: 0;
 	box-shadow: 0 -1px 2px #111111;
 	height: 45px;
@@ -291,6 +291,7 @@ footer{
 	position: fixed;
 	width: 100%;
 	z-index: 100000;
+    opacity: 0.4;
 }
 
 footer h2{
