Corrected some comments in css

--- a/static/css/site.css
+++ b/static/css/site.css
@@ -134,7 +134,7 @@ section, footer{
 
 
 /*----------------------------
-	Slide 1 - Intro
+	Slide: Intro
 -----------------------------*/
 
 
@@ -161,7 +161,7 @@ section, footer{
 
 
 /*----------------------------
-	Slide 2 - Simplicity
+	Slide: Body
 -----------------------------*/
 
 
@@ -190,7 +190,7 @@ section, footer{
 
 
 /*----------------------------
-	Slide 3 - Connect
+	Slide: Nutrition
 -----------------------------*/
 
 
